# ByteTrack_OpenVINO

./: CMakeLists.txt  README.md
docker/: Dockerfile  README.md  run_docker.sh
src/: main.cpp
